Замена лого в футере
- добавил нужные иконки в спрайт
- создал компоненту стилей _logo.html
- заменил логотип, сделав нужные правки в коде футера
- перевесил id="contacts" с формы регистрации на список контактов(номер телефона и ссылка на инстаграмм) в футере

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="footer__contact-wrapper">
 
-            <a class="footer__contact-logo-mobile" href="#top">
+            <!-- <a class="footer__contact-logo-mobile" href="#top">
 
                 <svg class="footer__contact-logo-icon">
                     <use href="./images/sprite.svg#logo--mobile"></use>
@@ -18,9 +18,25 @@
                     <use href="./images/sprite.svg#logo"></use>
                 </svg>
 
+            </a> -->
+            <a href="#top" class="logo footer__contact-logo-t-d">
+                <svg class="letters">
+                    <use href="./images/sprite.svg#letters"></use>
+                </svg>
+                <svg class="fire">
+                    <use href="./images/sprite.svg#fire"></use>
+                </svg>
+            </a>
+            <a href="#top" class="logo footer__contact-logo-mobile">
+                <svg class="letters-mobile">
+                    <use href="./images/sprite.svg#letters-mobile"></use>
+                </svg>
+                <svg class="fire-mobile">
+                    <use href="./images/sprite.svg#fire"></use>
+                </svg>
             </a>
 
-            <ul class="footer__contact-list">
+            <ul class="footer__contact-list" id="contacts">
                 <li class="footer__contact-list-item"><a class="footer__contact-list-item-tel" href="tel:+380000000000">
                         <svg class="footer__contact-list-item-tel-icon">
                             <use href="./images/sprite.svg#icon-tel"></use>
