--- a/src/sass/layout/_ancors.scss
+++ b/src/sass/layout/_ancors.scss
@@ -7,8 +7,7 @@
 }
 #about-us,
 #programm,
-#study-options,
-#contacts {
+#study-options {
   position: absolute;
   top: -89px;
   @media screen and (min-width: 768px) {
