--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 // components
 @import './components/button';
 @import './components/title';
+@import './components/logo';
 // layout
 @import './layout/garant';
 @import './layout/main_problems';
