Заменил Лого в Хедере

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -60,7 +60,7 @@
 }
 
 @media screen and (max-width: 767.99px) {
-  .logo {
+  .logo-desktop-tablet {
     display: none;
     &__image {
       width: 80px;
@@ -109,7 +109,7 @@
   .header__body {
     height: 128px;
   }
-  .logo {
+  .logo-desktop-tablet {
     display: block;
     &__image {
       width: 128px;
@@ -159,7 +159,7 @@
   .header__body {
     height: 130px;
   }
-  .logo {
+  .logo-desktop-tablet {
     display: block;
     &__image {
       width: 128px;
