--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container">
         <div class="header__body">
-            <a href="#top" class="logo" close-menu>
+            <!-- <a href="#top" class="logo-desktop-tablet" close-menu>
                 <svg class="logo__image">
                     <use href="./images/sprite.svg#logo"></use>
                 </svg>
@@ -10,13 +10,29 @@
                 <svg class="logo__image">
                     <use href="./images/sprite.svg#logo--mobile"></use>
                 </svg>
+            </a> -->
+            <a href="#top" class="logo logo-desktop-tablet">
+                <svg class="letters">
+                    <use href="./images/sprite.svg#letters"></use>
+                </svg>
+                <svg class="fire">
+                    <use href="./images/sprite.svg#fire"></use>
+                </svg>
+            </a>
+            <a href="#top" class="logo logo-mobile">
+                <svg class="letters-mobile">
+                    <use href="./images/sprite.svg#letters-mobile"></use>
+                </svg>
+                <svg class="fire-mobile">
+                    <use href="./images/sprite.svg#fire"></use>
+                </svg>
             </a>
             <div class="header__menu" data-menu-mobile>
 
                 <div class="header__menu-tablet" data-menu-tablet>
                     <div class="container">
                         <div class="mobile-menu">
-                            <a href="#top" class="logo-menu-tablet" close-menu>
+                            <!-- <a href="#top" class="logo-menu-tablet" close-menu>
                                 <svg class="logo__image">
                                     <use href="./images/sprite.svg#logo--tablet-menu"></use>
                                 </svg>
@@ -24,6 +40,22 @@
                             <a href="#top" class="logo-menu-mobile" close-menu>
                                 <svg class="logo__image">
                                     <use href="./images/sprite.svg#logo--mobile-menu"></use>
+                                </svg>
+                            </a> -->
+                            <a href="#top" class="logo logo-menu-tablet">
+                                <svg class="letters-tablet-menu">
+                                    <use href="./images/sprite.svg#letters-tablet-menu"></use>
+                                </svg>
+                                <svg class="fire">
+                                    <use href="./images/sprite.svg#fire"></use>
+                                </svg>
+                            </a>
+                            <a href="#top" class="logo logo-menu-mobile">
+                                <svg class="letters-mobile-menu">
+                                    <use href="./images/sprite.svg#letters-mobile-menu"></use>
+                                </svg>
+                                <svg class="fire-mobile">
+                                    <use href="./images/sprite.svg#fire"></use>
                                 </svg>
                             </a>
 
