--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,5 +1,177 @@
-.slider__item {
-  width: 280px;
-  height: 565px;
-  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+.reviews {
+  margin-bottom: 50px;
+}
+.rev-title {
+  text-align: center;
+  padding-bottom: 40px;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  color: #111518;
+  justify-content: center;
+}
+.rev-list__item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.rev-list__photo {
+  width: 90px;
+  height: 90px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.rev-list__soc-icon {
+  width: 30px;
+  height: 17px;
+}
+.rev-list__title {
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: 0.08em;
+  color: #ff6b09;
+  margin-bottom: 10px;
+}
+.rev-list__student-info {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.08em;
+  color: #b9b9b9;
+  margin-bottom: 10px;
+}
+.rev-list__student-feedback {
+  max-width: 240px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.67;
+  color: #3d3d3d;
+  margin-left: auto;
+  margin-right: auto;
+}
+.rev-list__left-side {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.rev-list__right-side {
+  margin-bottom: 29px;
+}
+.feedback-readmore {
+  text-decoration-line: underline;
+  color: #ff6b09;
+}
+.student-list {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.student-list_item:not(:last-child) {
+  margin-right: 10px;
+}
+.student-list_item:nth-child(n + 4) {
+  display: none;
+}
+@media screen and (min-width: $tablet) {
+  .rev-title {
+    font-size: 26px;
+  }
+  br {
+    display: none;
+  }
+  .rev-list__left-side {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .rev-list__right-side {
+    display: block;
+    text-align: left;
+    margin-bottom: 29px;
+  }
+  .rev-list__item {
+    display: flex;
+    flex-direction: row;
+  }
+  .rev-list__photo {
+    width: 150px;
+    height: 150px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-left: 40px;
+    margin-right: 46px;
+  }
+  .rev-list__title {
+    font-size: 20px;
+    line-height: 1.2;
+    margin-bottom: 20px;
+  }
+  .student-list_item:nth-child(n + 4) {
+    display: block;
+  }
+  .student-list_item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .rev-title {
+    font-size: 46px;
+  }
+  br {
+    display: none;
+  }
+  .rev-list__left-side {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .rev-list__right-side {
+    display: block;
+    text-align: left;
+    margin-bottom: 91px;
+    max-width: 769px;
+  }
+  .rev-list__item {
+    display: flex;
+    flex-direction: row;
+  }
+  .rev-list__photo {
+    width: 150px;
+    height: 150px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    margin-left: 82px;
+    margin-right: 40px;
+  }
+  .rev-list__title {
+    font-size: 30px;
+    line-height: 1.23;
+    margin-bottom: 10px;
+  }
+  .rev-list__student-info {
+    font-size: 14px;
+    line-height: 1.21;
+    margin-bottom: 20px;
+    width: 438px;
+  }
+  .rev-list__student-feedback {
+    font-size: 18px;
+    line-height: 1.56;
+  }
+  .student-list_item:nth-child(n + 4) {
+    display: block;
+  }
+  .student-list_item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .reviews {
+    margin-bottom: 130px;
+  }
+  .rev-list__soc-icon {
+    margin-left: 40px;
+  }
 }
