--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,11 +1,7 @@
 .hero {
-  &-section {
-    margin: 0 auto;
-  }
-
   &-container {
     position: relative;
-    padding-top: 50px;
+    padding-top: 109px;
     padding-bottom: 50px;
 
     background: #ffffff;
@@ -113,12 +109,10 @@
 
 @media screen and (min-width: 768px) {
   .hero {
-    &-section {
-      overflow: hidden;
-    }
     &-container {
-      padding-top: 70px;
+      padding-top: 158px;
       padding-bottom: 50px;
+      // overflow: hidden;
 
       background-image: url('../images/hero/png/wave-tablet.png');
       background-size: 768px 605px;
@@ -141,7 +135,7 @@
 
     &-picture {
       position: absolute;
-      top: 84px;
+      top: 177px;
       left: 332px;
       margin: 0;
     }
@@ -169,7 +163,7 @@
 @media screen and (min-width: 1344px) {
   .hero {
     &-container {
-      padding-top: 125px;
+      padding-top: 225px;
       padding-bottom: 130px;
 
       background-image: url('../images/hero/png/wave-desktop.png');
@@ -219,8 +213,11 @@
 
     &-picture {
       position: absolute;
-      top: 46px;
-      left: 609px;
+      top: 149px;
+      left: 608px;
+
+      width: 842px;
+      height: 718px;
     }
 
     &-advantage-list {
@@ -256,5 +253,3 @@
     }
   }
 }
-
-// надеюсь, что все хорошо =)
