--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,6 @@
 <header class="header">
     <div class="container">
         <div class="header__body">
-            <!-- <a href="#top" class="logo-desktop-tablet" close-menu>
-                <svg class="logo__image">
-                    <use href="./images/sprite.svg#logo"></use>
-                </svg>
-            </a>
-            <a href="#top" class="logo-mobile" close-menu>
-                <svg class="logo__image">
-                    <use href="./images/sprite.svg#logo--mobile"></use>
-                </svg>
-            </a> -->
             <a href="#top" class="logo logo-desktop-tablet">
                 <svg class="letters">
                     <use href="./images/sprite.svg#letters"></use>
@@ -32,17 +22,7 @@
                 <div class="header__menu-tablet" data-menu-tablet>
                     <div class="container">
                         <div class="mobile-menu">
-                            <!-- <a href="#top" class="logo-menu-tablet" close-menu>
-                                <svg class="logo__image">
-                                    <use href="./images/sprite.svg#logo--tablet-menu"></use>
-                                </svg>
-                            </a>
-                            <a href="#top" class="logo-menu-mobile" close-menu>
-                                <svg class="logo__image">
-                                    <use href="./images/sprite.svg#logo--mobile-menu"></use>
-                                </svg>
-                            </a> -->
-                            <a href="#top" class="logo logo-menu-tablet">
+                            <a href="#top" class="logo logo-menu-tablet" close-menu>
                                 <svg class="letters-tablet-menu">
                                     <use href="./images/sprite.svg#letters-tablet-menu"></use>
                                 </svg>
@@ -50,7 +30,7 @@
                                     <use href="./images/sprite.svg#fire"></use>
                                 </svg>
                             </a>
-                            <a href="#top" class="logo logo-menu-mobile">
+                            <a href="#top" class="logo logo-menu-mobile" close-menu>
                                 <svg class="letters-mobile-menu">
                                     <use href="./images/sprite.svg#letters-mobile-menu"></use>
                                 </svg>
