--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,54 +1,57 @@
 .section-products{
  text-align: center;
+ margin-top: 121px;
+ margin-bottom: 98px;
 }
 
 .products-list{
-    display: flex;
-    justify-content: center;
+    margin-top: 144px;
 }
 
 .products-item{
-    justify-content: center;
-    width: 330px;
     border-radius: 24px;
-    margin-left: 30px;
-    margin-top: 260px;
+    padding-bottom: 41px;
 
     &:nth-child(1){
-        background: #FFB8CA;
+        background: var(--products-pink-color);
+        margin-bottom: 130px;
     }
     
     &:nth-child(2){
-        background: #F0D1A5;
+        background: var(--location-cafe-color);
+        margin-bottom: 130px;
     }
 
     &:nth-child(3){
-        background: #C2E297;
+        background: var(--products-green-color);
     }
 }
 
 .products-images{
     position: relative;
-    bottom: 210px;
+    bottom: 113px;
     left: 0;
+    margin: 0 auto;
+}
+.title-three{
+    margin-bottom: 30px;
 }
 
 .products-text{
-    margin: 0 44px;
-    margin-top: 32px;
-    font-family: DM Sans;
+    font-family: $main-font;
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #FFFFFF;
+    color: var(--primary-white-color);
+    padding: 0 40px;
 }
 
 .products-link{
     width: 40px;
     height: 40px;
-    background: #FFFFFF;
+    background: var(--primary-white-color);
     border-radius: 50%;
     align-items: center;
     display: flex;
@@ -60,5 +63,78 @@
 .products-icon{
     width: 18px;
     height: 13px;
-    fill: #D41443;
+    fill: var(--text-red-color);
 }
+
+@media screen and (min-width: $tablet){
+    .section-products{
+        margin-top: 122px;
+        margin-bottom: 112px;
+    }
+
+    .products-list{
+        margin-top: 150px;
+        margin-bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .products-item:nth-child(1){
+        margin-right: 20px;
+        margin-bottom: 0;
+    }
+        
+    .products-item:nth-child(2){
+        margin-right: 20px;
+        margin-bottom: 0;
+    }
+    
+    .products-images{
+        bottom: 111px;
+    }
+    
+    .products-text{
+        line-height: 1.79;
+        margin-bottom: 40px;
+        
+        padding: 0 11px;
+    }
+
+}
+
+@media screen and (min-width: $desktop){
+    .section-products{
+        margin-top: 127px;
+        margin-bottom: 119px;
+    }
+
+    .products-list{
+        margin-top: 259px;
+    }
+
+    .products-item:nth-child(1){
+        margin-right: 30px;
+    }
+        
+    .products-item:nth-child(2){
+        margin-right: 30px;
+    }
+
+    .products-images{
+        bottom: 130px;
+    }
+
+    .title-three{
+        margin-bottom: 32px;
+    }
+
+    .products-text{
+        font-size: 16px;
+        line-height: 1.75;
+        padding: 0 44px;
+    }
+}
+
+
+
