Добавив класи для анімації

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,17 +1,17 @@
 <section class="hero-container">
   <div class="hero container">
     <div class="hero-text-box">
-      <h1 class="hero-title">
+      <h1 class="hero-title _anim-items">
         Комплексная <br />
         подготовка к ВНО <br />
         по английскому языку
       </h1>
-      <p class="hero-text">
+      <p class="hero-text _anim-items">
         <span class="secondary-text">Просто не будет.</span><br />Но ты
         гарантировано наберешь
         <span class="accent">+25 баллов</span>
       </p>
-      <button class="hero-button" type="button">
+      <button class="hero-button _anim-items" type="button">
         хочу на бесплатное занятие
       </button>
     </div>
@@ -32,7 +32,7 @@
         media="(min-width: 320px)"
       />
       <img
-        class="hero-images"
+        class="hero-images _active"
         src="/images/hero/bg-desktop.png"
         alt="Люди сидять за компютером"
       />
