--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -42,8 +42,13 @@
       height: 28px;
     }
     .menu-close-btn {
-      width: 14.5px;
-      height: 14.5px;
+      outline: none;
+      border: none;
+      color: #ffffff;
+      .svg-button {
+        width: 14.5px;
+        height: 14.5px;
+      }
     }
     .menu-nav {
       display: flex;
@@ -69,8 +74,11 @@
         }
       }
     }
+
     .menu-header-button {
+      outline: none;
       display: flex;
+      border: none;
       margin-left: auto;
       margin-right: auto;
       justify-content: center;
@@ -106,8 +114,13 @@
       display: none;
     }
     .nav-menu-btn {
-      width: 20px;
-      height: 12px;
+      outline: none;
+      border: none;
+      color: #ffffff;
+      .svg-button {
+        width: 20px;
+        height: 12px;
+      }
     }
     .mobile_logo {
       width: 80px;
@@ -147,8 +160,13 @@
       height: 45px;
     }
     .menu-close-btn {
-      width: 14.5px;
-      height: 14.5px;
+      outline: none;
+      border: none;
+      color: #ffffff;
+      .svg-button {
+        width: 14.5px;
+        height: 14.5px;
+      }
     }
 
     .menu-nav {
@@ -205,8 +223,13 @@
     }
 
     .nav-menu-btn {
-      width: 20px;
-      height: 12px;
+      outline: none;
+      border: none;
+      color: #ffffff;
+      .svg-button {
+        width: 20px;
+        height: 12px;
+      }
     }
     .header-button {
       margin-left: auto;
