--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -143,6 +143,14 @@
   overflow: hidden;
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
+  .our-program-bg {
+    background-image: url('../images/our-program/bg-our-program-mobile@2x.png');
+  }
+}
+
 @media screen and (min-width: 768px){
     .our-program{
         display: block;
@@ -216,6 +224,14 @@
     }
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+ .our-program-bg{
+    background-image: url('../images/our-program/bg-our-program-tablet@2x.png');
+ }  
+}
+
 @media screen and (min-width: 1344px){
   .our-program{
     padding-top: 120px;
@@ -233,7 +249,7 @@
         &::before{
           left: 0;
           top: 140px;
-          width: 1344px;
+          width: 1684px;
           height: 1px;
       }
     }
@@ -280,6 +296,13 @@
     }
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px),
+  screen and (min-resolution: 192dpi) and (min-width: 1344px),
+  screen and (min-resolution: 2dppx) and (min-width: 1344px) {
+ .our-program-bg{ 
+    background-image: url('../images/our-program/bg-our-program-desktop@2x.png');
+  }
+}
 
 
 //why //
