--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -72,7 +72,7 @@
   margin: 0;
   padding: 0;
   border: none;
-  // z-index: 100;
+  z-index: 100;
   background-color: transparent;
   cursor: pointer;
 
