--- a/src/sass/layout/_page-hero.scss
+++ b/src/sass/layout/_page-hero.scss
@@ -79,7 +79,33 @@
     height: 178px;
     background-size: cover;
 
-    background-image: url('../images/hero/hero-bg-desktop.png');
+    background-image: url('../images/hero/hero-bg-mobile.png');
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
+  .hero-bg {
+    background-image: 
+      url('../images/hero/hero-bg-mobile@2x.png');
+  }
+
+  .page-hero{
+    background-image: url('../images/hero/hero-wave-mobile@2x.png');
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) ,
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero-bg {
+    background-image: 
+      url('../images/hero/hero-bg-tablet@2x.png');
+  }
+
+  .page-hero{
+    background-image: url('../images/hero/hero-wave-tablet@2x.png');
+  }
 }
 
 @media screen and (min-width: 768px){
@@ -114,6 +140,19 @@
     
         background-image: url('../images/hero/hero-bg-tablet.png');
     }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px) ,
+  screen and (min-resolution: 192dpi) and (min-width: 1344px),
+  screen and (min-resolution: 2dppx) and (min-width: 1344px) {
+  .hero-bg {
+    background-image: 
+      url('../images/hero/hero-bg-desktop@2x.png');
+    }
+
+  .page-hero{
+    background-image: url('../images/hero/hero-wave-desktop@2x.png');
+   }
 }
 
 @media screen and (min-width: 1344px){
