--- a/src/sass/layout/_programm.scss
+++ b/src/sass/layout/_programm.scss
@@ -245,7 +245,7 @@
       left: 0;
       content: '';
       display: block;
-      width: 100vw;
+      width: 100%;
       height: 1px;
       background-color: var(--white-color);
     }
