--- a/src/sass/layout/_review.scss
+++ b/src/sass/layout/_review.scss
@@ -23,7 +23,7 @@
   background-image: repeating-linear-gradient(
     to top,
     #e1e1e1 0px 1px,
-    transparent 1px 35px
+    transparent 1px 36px
   );
 }
 
@@ -43,11 +43,12 @@
   .review-wrapper {
     width: 620px;
     margin: 19px auto 42px;
+    padding: 47px 75px 27px;
   }
 
-  .review-wrapper-text {
-    padding: 47px 60px 27px;
-  }
+  // .review-wrapper-text {
+
+  // }
 
   .review-text {
     font-weight: 500;
@@ -56,6 +57,11 @@
     text-align: center;
     letter-spacing: 0.04em;
     padding: 0 24px;
+    background-image: repeating-linear-gradient(
+      to top,
+      #e1e1e1 0px 1px,
+      transparent 1px 31px
+    );
   }
 }
 
