--- a/src/partials/programm+why-us.html
+++ b/src/partials/programm+why-us.html
@@ -3,6 +3,7 @@
 <span id="programm"></span>
   <div class="programm__container container">
     <h2 class="programm__title" >Наша программа</h2>
+    <div class="programm__semester-list-wrapper">
     <ul class="programm__semester-list list">
 
       <li class="programm__semester-list-item">
@@ -131,6 +132,7 @@
       </li>
 
     </ul>
+    </div>
   </div>
 
 </section>
