--- a/src/sass/layout/_how-we-do-it.scss
+++ b/src/sass/layout/_how-we-do-it.scss
@@ -66,7 +66,7 @@
   text-align: center;
   letter-spacing: 0.08em;
 
-  color: var(--grey-background);
+  color: var(--grey-color);
 
   .how-we-do-list-item:hover &,
   .how-we-do-list-item:focus & {
