--- a/src/partials/page-how-do.html
+++ b/src/partials/page-how-do.html
@@ -1,5 +1,5 @@
 <!-- Как мы это делаем -->
-<section class="how-do">
+<section id="how-do" class="how-do">
     <div class="container">
         <h2 class="how-do-title">Как мы это делаем</h2>
         <ul class="how-do-list list">
