--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -1,5 +1,5 @@
 <!--Преподаватель-->
-<section class="teacher section">
+<section id="teacher" class="teacher section">
   <div class="container">
     <h2 class="subtitle">Преподаватель</h2>
     <div class="teacher-container">
