--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -22,34 +22,36 @@
         </button>
     </div>
     <div class="menu" id="menu" data-menu>
-        <nav class="nav">
-            <a href="./index.html" class="logo-dark link" aria-label="Логотип сайта" lang="en">
-                <div class="logo-main-container">
-                    <span class="logo-text dark-theme">Hell</span>
-                    <svg class="logo-icon">
-                        <use href="./images/sprite.svg#Fire"></use>
-                    </svg>
-                    <span class="logo-text dark-theme">EN</span>
-                </div>
-                <span class="logo-description dark-theme">
-                    <span class="logo-accent">Адский</span>Английский
-                </span>
-            </a>
-            <ul class="nav-list list">
-                <li class="nav-item">
-                    <a href="#" class="nav-link link">Программа обучения</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link link">О нас</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link link">Варианты обучения</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link link">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <button type="button" class="nav-btn">Консультация по телефону</button>
+        <div class="menu-container">
+            <nav class="nav">
+                <a href="./index.html" class="logo-dark link" aria-label="Логотип сайта" lang="en">
+                    <div class="logo-main-container">
+                        <span class="logo-text dark-theme">Hell</span>
+                        <svg class="logo-icon">
+                            <use href="./images/sprite.svg#Fire"></use>
+                        </svg>
+                        <span class="logo-text dark-theme">EN</span>
+                    </div>
+                    <span class="logo-description dark-theme">
+                        <span class="logo-accent">Адский</span>Английский
+                    </span>
+                </a>
+                <ul class="nav-list list">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link link">Программа обучения</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link link">О нас</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link link">Варианты обучения</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <button type="button" class="nav-btn">Консультация по телефону</button>
+        </div>
     </div>
 </div>
