--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -1,6 +1,3 @@
-.page-header {
-  position: relative;
-}
 .nav-container {
   display: flex;
   justify-content: space-between;
@@ -173,8 +170,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    padding-left: 20px;
-    padding-right: 20px;
     overflow-y: scroll;
     width: 100vw;
     height: 100vh;
@@ -206,10 +201,10 @@
     margin-right: 40px;
   }
 
-  .menu {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
+  // .menu {
+  //   padding-left: 40px;
+  //   padding-right: 40px;
+  // }
 
   .nav-link {
     font-size: 26px;
@@ -259,6 +254,9 @@
 
   .menu {
     padding: 0;
+  }
+
+  .menu-container {
     display: flex;
     align-items: center;
   }
@@ -295,5 +293,21 @@
     &:last-child {
       padding-right: 60px;
     }
+  }
+}
+
+.menu-container {
+  @media screen and (max-width: 767px) {
+    margin: 0 auto;
+    width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
+    width: 768px;
+    margin: 0 auto;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
