updated methods tablet width

--- a/src/sass/layout/_methods.scss
+++ b/src/sass/layout/_methods.scss
@@ -59,8 +59,7 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and(min-width:768px) {
-    // width: 334px;
-    flex-basis: calc((688px - 20px)/2);
+    width: 334px;
     height: 334px;
     padding: 40px 29px 65px 29px;
   }
@@ -69,7 +68,7 @@
     width: calc((100% - 3 * 20px) / 3);
     // width: 425px;
     height: 396px;
-    padding: 40px 18px  55px 18px;
+    padding: 40px 18px 55px 18px;
   }
 
   &:hover {
