--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -192,9 +192,8 @@
   }
 
   &-button {
-    max-width: 260px;
+    width: 260px;
     height: 48px;
-    padding: 0 14px;
     margin: 0 10px;
 
     color: $accent-background;
@@ -331,6 +330,11 @@
 
     &-button {
       display: block;
+      width: 336px;
+      height: 70px;
+      font-size: 14px;
+      line-height: 1.214;
+      letter-spacing: 0.14em;
     }
 
     &-button.is-hidden {
