added button to modal svg icons

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,10 +18,11 @@
       </ul>
     </nav>
     <a class="header-button" href="#">консультация по телефону</a>
-
-    <svg class="nav-menu-btn" data-modal-open>
-      <use href="./images/sprite.svg#nav-menu"></use>
-    </svg>
+    <button class="header-svg-button" type="button" data-modal-open>
+      <svg class="nav-menu-btn">
+        <use href="./images/sprite.svg#nav-menu"></use>
+      </svg>
+    </button>
   </div>
   <div class="menu-open menu-container is-hidden" data-modal>
     <div class="upper-menu container">
@@ -30,9 +31,11 @@
           <use href="./images/sprite.svg#mobile_logo"></use>
         </svg>
       </a>
-      <svg class="menu-close-btn" data-modal-close>
-        <use href="./images/sprite.svg#menu_closed"></use>
-      </svg>
+      <button class="header-svg-button" type="button" data-modal-close>
+        <svg class="menu-close-btn">
+          <use href="./images/sprite.svg#menu_closed"></use>
+        </svg>
+      </button>
     </div>
     <nav class="menu-nav">
       <ul class="nav-list">
