--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -10,6 +10,12 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.header-svg-button {
+  border: none;
+  background-color: transparent;
+}
+
 @media screen and(min-width:320px) and(max-width: 767px) {
   .menu-container {
     position: relative;
