ready except desltop picture

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,7 +13,7 @@
     <button class="hero-button" type="button" data-modal-open>
       хочу бесплатное занятие
     </button>
-    <picture>
+    <!-- <picture>
       <source
         srcset="
           ./images/hero/png/header-desktop.png    1x,
@@ -44,7 +44,7 @@
         alt="Фотография группы"
         type="image/png"
       />
-    </picture>
+    </picture> -->
 
     <ul class="hero-advantage-list">
       <li class="hero-advantage-item">
