--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -167,6 +167,12 @@
     }
   }
 
+  @media screen and (max-width: 767px) {
+    &-menu-container {
+      padding: 108px 0px 0px 0px;
+    }
+  }
+
   // &-menu-container {
   //   display: none;
   //   position: absolute;
