--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="page-header">
     <div class="container header">
         <nav class="header-navigation">
             <a href="./index.html" class="logo" aria-label="logo" data-logo>
