--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu {
     margin-left: auto;
@@ -31,14 +32,17 @@
     }
   }
 
-  .header {
+  .page-header {
     position: absolute;
     left: 0;
     right: 0;
   }
+
+
   .navigation-list {
     list-style: none;
     margin-bottom: 50px;
+    align-self: auto;
   }
 
   .nav-link {
@@ -149,7 +153,7 @@
   }
   .navigation-list {
     display: flex;
-    margin: 0;
+    margin: 0 auto;
   }
   .nav-link {
     color: var(--grey-color);
