--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,20 +8,23 @@
     <nav class="nav">
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a class="nav-link" href="#">Программы обучения</a>
+          <a class="nav-link" href="#programs">Программы обучения</a>
         </li>
-        <li class="nav-list-item"><a class="nav-link" href="#">О нас</a></li>
         <li class="nav-list-item">
-          <a class="nav-link" href="#">Варианты обучения</a>
+          <a class="nav-link" href="#feedback">О нас</a>
         </li>
-        <li class="nav-list-item"><a class="nav-link" href="#">Контакты</a></li>
+        <li class="nav-list-item">
+          <a class="nav-link" href="#methods">Варианты обучения</a>
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-link" href="#contacts">Контакты</a>
+        </li>
       </ul>
     </nav>
     <a class="header-button" href="#">консультация по телефону</a>
 
     <button class="nav-menu-btn" type="button" data-modal-open>
       <svg class="svg-button">
-
         <use href="./images/sprite.svg#nav-menu"></use>
       </svg>
     </button>
@@ -35,7 +38,6 @@
       </a>
       <button class="menu-close-btn" type="button" data-modal-close>
         <svg class="svg-button">
-
           <use href="./images/sprite.svg#menu_closed"></use>
         </svg>
       </button>
@@ -43,15 +45,21 @@
     <nav class="menu-nav">
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a class="nav-link" href="#">Программы обучения</a>
+          <a class="nav-link" href="#programs">Программы обучения</a>
         </li>
-        <li class="nav-list-item"><a class="nav-link" href="#">О нас</a></li>
         <li class="nav-list-item">
-          <a class="nav-link" href="#">Варианты обучения</a>
+          <a class="nav-link" href="#feedback">О нас</a>
         </li>
-        <li class="nav-list-item"><a class="nav-link" href="#">Контакты</a></li>
+        <li class="nav-list-item">
+          <a class="nav-link" href="#methods">Варианты обучения</a>
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-link" href="#contacts">Контакты</a>
+        </li>
       </ul>
     </nav>
-    <a class="menu-header-button" href="#"> консультация по телефону </a>
+    <a class="menu-header-button" href="tel:+380000000000">
+      консультация по телефону
+    </a>
   </div>
 </header>
