--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -42,7 +42,11 @@
   .navigation-list {
     list-style: none;
     margin-bottom: 50px;
-    align-self: auto;
+    @media screen and (max-width: 767px) {
+      max-width: 320px;
+      margin-left: auto;
+    margin-right: auto;
+    }
   }
 
   .nav-link {
