--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -79,6 +79,7 @@ input::placeholder {
   &:focus {
     background: $white-background;
     color: $accent-text-color;
+    transition: $animation;
   }
 }
 
@@ -137,6 +138,12 @@ input::placeholder {
   screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .form {
     background-image: url('../images/registration/png/registration-tablet@2x.png');
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+  .form {
+    background-size: cover;
   }
 }
 
