--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -216,7 +216,7 @@
       top: 149px;
       left: 608px;
 
-      width: 842px;
+      width: 775px;
       height: 718px;
     }
 
@@ -251,5 +251,11 @@
       width: 100px;
       height: 102px;
     }
+  }
+}
+
+@media screen and (min-width: 1444px) {
+  .hero-picture {
+    width: 842px;
   }
 }
