Adds hover/focus and position to menu-btn.

--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -1,3 +1,7 @@
+.page-header {
+  position: relative;
+}
+
 .nav-container {
   display: flex;
   justify-content: space-between;
@@ -72,17 +76,35 @@
   z-index: 100;
   background-color: transparent;
   cursor: pointer;
+  stroke: #000;
+
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.is-open {
+    position: absolute;
+    stroke: #fff;
+  }
+
+  &:hover,
+  &:focus {
+    stroke: var(--accent-color);
+  }
+
+  &.is-open:hover,
+  &.is-open:focus {
+    stroke: var(--accent-color);
+  }
 
   @media screen and(max-width: 767px) {
     &.is-open {
-      position: fixed;
+      // position: fixed;
       right: 20px;
     }
   }
 
   @media screen and(min-width: 768px) and (max-width: 1343px) {
     &.is-open {
-      position: fixed;
+      // position: fixed;
       right: 40px;
     }
   }
