--- a/src/sass/layout/_animation.scss
+++ b/src/sass/layout/_animation.scss
@@ -52,3 +52,16 @@
     }
   }
 }
+.hero-images._active {
+  opacity: 1;
+  animation: rotate 2000ms;
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
