--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -97,14 +97,14 @@
 
   @media screen and(max-width: 767px) {
     &.is-open {
-      // position: fixed;
+      position: fixed;
       right: 20px;
     }
   }
 
   @media screen and(min-width: 768px) and (max-width: 1343px) {
     &.is-open {
-      // position: fixed;
+      position: fixed;
       right: 40px;
     }
   }
