changes 7 slides to 5 and removes lower arrows

--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -109,8 +109,8 @@
   }
   .multiple-items {
     width: 558px;
-    .slick-prev,
-    .slick-next {
+    .slick-prev::before,
+    .slick-next::before {
       display: none;
     }
   }
