--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -38,7 +38,7 @@
   margin-bottom: 20px;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
-.multiple-items {
+.slider-dots {
   margin: 0 auto;
   width: 182px;
   .slick-list {
@@ -107,10 +107,10 @@
       right: -6px;
     }
   }
-  .multiple-items {
+  .slider-dots {
     width: 558px;
-    .slick-prev,
-    .slick-next {
+    .slick-prev::before,
+    .slick-next::before {
       display: none;
     }
   }
