--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -20,6 +20,11 @@
     transition: opacity 250ms var(--cubic);
   }
 
+  @media screen and (max-height: 502px) {
+    top: 10px;
+    transform: translate(-50%, 0);
+  }
+
   @media screen and (min-width: 768px) {
     width: 450px;
   }
