--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -8,6 +8,7 @@
   border: 0;
 
   cursor: pointer;
+transition: color 250ms var(--cubic), background-color 250ms var(--cubic);
 
   @include font(12px, 700, 15px);
   letter-spacing: 0.08em;
@@ -15,6 +16,13 @@
 
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  &:hover,
+  :focus{
+    background-color: var(--primary-white-color);
+    color: var(--accent-color) ;
+    border: 2px solid var(--accent-color);
+    border-radius: 5px;
+  }
 
   @media screen and (min-width: 1344px) {
     min-height: 70px;
