--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -77,6 +77,15 @@
      border: none;
      color: var(--primary-white-color);
      cursor: pointer;
+     transition: color 250ms var(--cubic), background-color 250ms var(--cubic);
+     
+     &:hover,
+     :focus{
+       background-color: var(--primary-white-color);
+       color: var(--accent-color);
+       border:  2px solid var(--accent-color);
+       border-radius: 5px;
+     }
     }
     @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
     screen and (min-resolution: 192dpi) and (min-width: 320px),
