header hero FINAL
добавил ховер и фокус на кнопках

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -75,6 +75,7 @@
     color: $white-text-color;
     background-color: $accent-background;
     border: 2px solid $accent-background;
+    cursor: pointer;
 
     font-style: normal;
     font-weight: bold;
@@ -84,6 +85,13 @@
     text-align: center;
     letter-spacing: 0.08em;
     text-transform: uppercase;
+
+    &:hover,
+    &:focus {
+      color: $accent-text-color;
+      background-color: $white-background;
+      transition: $animation;
+    }
   }
 
   &-picture {
