Исправления по меню
Исправил позиционирование кнопки меню и добавил скрытие бекдропа при нажатии на ссылку в меню.

--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -1,8 +1,9 @@
-.page-header {
-  position: relative;
-}
+// .page-header {
+//   position: relative;
+// }
 
 .nav-container {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -69,6 +70,8 @@
 }
 
 .menu-btn {
+  position: absolute;
+  right: 0;
   display: block;
   margin: 0;
   padding: 0;
@@ -95,19 +98,19 @@
     stroke: var(--accent-color);
   }
 
-  @media screen and(max-width: 767px) {
-    &.is-open {
-      position: fixed;
-      right: 20px;
-    }
-  }
+  // @media screen and(max-width: 767px) {
+  //   &.is-open {
+  //     position: fixed;
+  //     right: 20px;
+  //   }
+  // }
 
-  @media screen and(min-width: 768px) and (max-width: 1343px) {
-    &.is-open {
-      position: fixed;
-      right: 40px;
-    }
-  }
+  // @media screen and(min-width: 768px) and (max-width: 1343px) {
+  //   &.is-open {
+  //     position: fixed;
+  //     right: 40px;
+  //   }
+  // }
 
   @media screen and(max-width: 1343px) {
     & .menu-close-icon {
@@ -170,7 +173,7 @@
 
   transition: color 250ms var(--cubic), background-color 250ms var(--cubic);
   &:hover,
-  :focus{
+  :focus {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
     border-radius: 5px;
