Исправляет :focus кнопочки “Отправить” в модальном окне.

--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -8,7 +8,7 @@
   border: 0;
 
   cursor: pointer;
-transition: color 250ms var(--cubic), background-color 250ms var(--cubic);
+  transition: color 250ms var(--cubic), background-color 250ms var(--cubic);
 
   @include font(12px, 700, 15px);
   letter-spacing: 0.08em;
@@ -17,9 +17,9 @@ transition: color 250ms var(--cubic), background-color 250ms var(--cubic);
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   &:hover,
-  :focus{
+  &:focus {
     background-color: var(--primary-white-color);
-    color: var(--accent-color) ;
+    color: var(--accent-color);
     border: 2px solid var(--accent-color);
     border-radius: 5px;
   }
