--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -22,6 +22,7 @@
     color: var(--accent-color);
     border: 2px solid var(--accent-color);
     border-radius: 5px;
+    outline: none;
   }
 
   @media screen and (min-width: 1344px) {
